--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation "com.android.support:support-compat:28.0.0"
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
