--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".TrakerApp"
@@ -23,6 +24,7 @@
             android:name=".network.LocationTrackingService">
             <!-- Any inner elements would go here. -->
         </service>
+        <service android:name=".view.ForegroundService" />
 
         <meta-data
             android:name="com.google.android.gms.version"
