--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation "com.android.support:support-compat:28.0.0"
+    // dexter runtime permissions
+    implementation 'com.karumi:dexter:4.2.0'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
